@@ -2,6 +2,16 @@
 
         Reviewed by Darin Fisher.
 
+        Upstream V8WorkerContextObjectEventListener for V8 bindings.
+        https://bugs.webkit.org/show_bug.cgi?id=25005
+
+        * bindings/v8/V8WorkerContextObjectEventListener.cpp: Added.
+        * bindings/v8/V8WorkerContextObjectEventListener.h: Added.
+
+2009-04-02  Jian Li  <jianli@chromium.org>
+
+        Reviewed by Darin Fisher.
+
         Upstream V8EventListenerList for V8 bindings.
         https://bugs.webkit.org/show_bug.cgi?id=25004
 
